--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>ANDALA MEGHANA/h1>
+            <h1>ANDALA MEGHANA>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
